manifests/infrastructure/rabbitmq/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rabbitmq-ingress
  namespace: storage-messaging
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false" # Pour le codespace
    nginx.ingress.kubernetes.io/rewrite-target: /$2 # Coupe le préfixe avant d'envoyer au conteneur
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /rabbitmq(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: rabbitmq
            port:
              number: 15672
